fixing widget alignment

--- a/assets/css/scss/lsx-testimonials.scss
+++ b/assets/css/scss/lsx-testimonials.scss
@@ -381,6 +381,18 @@
 	}
 }
 
+.gutenberg-compatible-template.using-gutenberg {
+	.entry-content {
+		.lsx-testimonial-block,
+		.lsx-testimonials-shortcode {
+			> .row {
+				margin-left: auto;
+				margin-right: auto;
+			}
+		}
+	}
+}
+
 .post-type-archive-testimonial {
 	.lsx-testimonials-container {
 		&:last-of-type,
